relm4-macros/tests/ui/compile-fail/component-missing-widgets.stderr
error[E0046]: not all trait items implemented, missing: `Widgets`
 --> tests/ui/compile-fail/component-missing-widgets.rs:6:1
  |
6 | impl SimpleComponent for TestComponent {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Widgets` in implementation
  |
  = help: implement the missing item: `type Widgets = Type;`
